assets/css/main.css
@font-face {
  font-family: 'Roboto';
  src: url('@/assets/fonts/Roboto-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@media only screen and (max-width: 400px) {
  
.title-text {
  font-family: Roboto;
  font-size: 16px;
  font-weight: 700;
  line-height: 35px;
  letter-spacing: 0em;
  text-align: left;
}
.text-button {
  font-family: Roboto;
  font-size: 12px;
  font-weight: 500;
  line-height: 19px;
  letter-spacing: 0em;
  text-align: left;
}
.info-text {
  font-family: Roboto;
  font-size: 18px;
  font-weight: 700;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: center;
}
}
@media only screen and (min-width: 768px) {
  .title-text {
    font-family: Roboto;
    font-size: 30px;
    font-weight: 700;
    line-height: 35px;
    letter-spacing: 0em;
    text-align: left;
  }
  .text-button {
    font-family: Roboto;
    font-size: 16px;
    font-weight: 500;
    line-height: 19px;
    letter-spacing: 0em;
    text-align: left;
  }
  .info-text {
    font-family: Roboto;
    font-size: 24px;
    font-weight: 700;
    line-height: 28px;
    letter-spacing: 0em;
    text-align: center;
  }
  }
.text-description {
  font-family: Roboto;
  font-size: 24px;
  font-weight: 700;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: left;
}


.text-search {
  font-family: Roboto;
font-size: 16px;
font-weight: 500;
line-height: 19px;
letter-spacing: 0em;
text-align: left;

}
.text-caption {
  font-family: Roboto;
  font-size: 14px;
  font-weight: 700;
  line-height: 14px;
  letter-spacing: 0em;
  text-align: left;
  color: #bbbdd0;
}

.text-small {
  font-family: Roboto;
  font-size: 12px;
  font-weight: 700;
  line-height: 12px;
  letter-spacing: 0em;
  text-align: left;
  color: white;
}



.card {
  padding: 16px;
  border-radius: 5px;
  border: 1px solid #dde2ff;
  background-color: white;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  z-index: -1
}

.chip {
  width: auto;
  height: auto;
  background: #7a8dfd;
  border-radius: 5px;
  padding: 5px 12px;
  padding-top:5px;
  text-align: center;
}
.width-full {
  width: 100%
}
.flex-box {
  display: flex;
}

.space-between {
  justify-content: space-between;
}

.align-self-center {
  align-self: center;
}
.align-content-space-between {
 align-content: space-between
}
textarea {
  width: 100%;
  border: 3px solid #d1d8ff;
  border-radius: 5px;
}

.text-small {
  font-family: Roboto;
  font-size: 12px;
  font-weight: 700;
  line-height: 14.06px;
  letter-spacing: 0em;
  text-align: left;
  color: white;
}

.text-done {
  color: #0bc375;
  text-decoration-line: line-through;
}

.margin-top-9 {
  margin-top: 9px;
}

.margin-top-32 {
  margin-top: 32px;
}

.margin-top-28 {
  margin-top: 28px;
}
.margin-left-28 {
  margin-left: 28px;
}


.margin-bottom-24 {
  margin-bottom: 24px;
}

.margin-bottom-34 {
  margin-bottom: 34px;
}

.margin-top-13 {
  margin-top: 13px;
}

.margin-left-19 {
  margin-left: 19px;
}

.margin-right-19 {
  margin-right: 19px;
}

.margin-right-5 {
  margin-right: 5px;
}
.relative-position {
  position: relative;
}
 .success {
  position:absolute;
  height: 55px;
  background-color: #0BC475;
  top:90px;
  left:0px;
  right:0px;
  border-radius: 5px;
}
.error {
  position:absolute;
  height: 55px;
  background-color: #E85F5F;
  top:90px;
  left:0px;
  right:0px;
  border-radius: 5px;
}
.swal-text {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 21px;
  margin:0px;
  color:White
}
.swal-text:last-child {
  margin-bottom:15px ;
}

.swal-text:first-child {
  margin-top:15px ;
}
.swal-overlay {
  background-color: transparent;
}

